# GitXeek

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  7b4d7857863f_added_merge_data_in_artifacts_schema.py  c7dff3266281_added_cognee_dataset_name_in_repository_.py  e115a8336012_added_processing_stats_in_repository_.py  f5764e497146_add_repository_artifacts_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  chat.py  github.py  health.py  repositories.py
app/api/v1/schemas/: auth.py  chat.py  github.py  repository.py  user.py
app/api/v1/services/: auth_service.py  chat_service.py  github_service.py  repository_service.py  user_service.py
app/core/: config.py  exceptions.py  security.py
app/db/: session.py
app/integrations/: cognee_client.py  git.py  github_client.py
app/models/: __init__.py  artifact.py  chat.py  repository.py  user.py
app/processing/: code_analyzer.py  constants.py  enricher.py  merger.py  normalizer.py  pipeline.py  progress.py  relevance.py  scheduler.py  schemas.py
